feat(): refactor meal plan